<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/statusbar_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="About the Application"
        app:titleTextColor="@android:color/white"
        android:background="@color/primary">

    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:orientation="vertical"
            android:paddingBottom="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1. Overview"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/secondary"
        android:layout_marginHorizontal="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_overview"
        android:textColor="@color/text_primary"
        android:layout_marginTop="5dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2. Key Features"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/secondary"
        android:layout_marginHorizontal="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp">
        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_gravity="top"
            android:layout_marginTop="7dp"
            android:src="@drawable/baseline_circle_24"
            app:tint="@color/text_primary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/about_keyfeature1"
            android:textColor="@color/text_primary" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp">
        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_gravity="top"
            android:layout_marginTop="7dp"
            android:src="@drawable/baseline_circle_24"
            app:tint="@color/text_primary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/about_keyfeature2"
            android:textColor="@color/text_primary" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp">
        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_gravity="top"
            android:layout_marginTop="7dp"
            android:src="@drawable/baseline_circle_24"
            app:tint="@color/text_primary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/about_keyfeature3"
            android:textColor="@color/text_primary" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp">
        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_gravity="top"
            android:layout_marginTop="7dp"
            android:src="@drawable/baseline_circle_24"
            app:tint="@color/text_primary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/about_keyfeature4"
            android:textColor="@color/text_primary" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp">
        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_gravity="top"
            android:layout_marginTop="7dp"
            android:src="@drawable/baseline_circle_24"
            app:tint="@color/text_primary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/about_keyfeature5"
            android:textColor="@color/text_primary" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3. Exam Analysis and Retakes"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/secondary"
        android:layout_marginHorizontal="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp">
        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_gravity="top"
            android:layout_marginTop="7dp"
            android:src="@drawable/baseline_circle_24"
            app:tint="@color/text_primary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/about_analysis1"
            android:textColor="@color/text_primary" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp">
        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_gravity="top"
            android:layout_marginTop="7dp"
            android:src="@drawable/baseline_circle_24"
            app:tint="@color/text_primary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/about_analysis2"
            android:textColor="@color/text_primary" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4. Question Management"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/secondary"
        android:layout_marginHorizontal="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp">
        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_gravity="top"
            android:layout_marginTop="7dp"
            android:src="@drawable/baseline_circle_24"
            app:tint="@color/text_primary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/about_Ques_management1"
            android:textColor="@color/text_primary" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp">
        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_gravity="top"
            android:layout_marginTop="7dp"
            android:src="@drawable/baseline_circle_24"
            app:tint="@color/text_primary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/about_Ques_management2"
            android:textColor="@color/text_primary" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp">
        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_gravity="top"
            android:layout_marginTop="7dp"
            android:src="@drawable/baseline_circle_24"
            app:tint="@color/text_primary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/about_Ques_management3"
            android:textColor="@color/text_primary" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5. Profile Management"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/secondary"
        android:layout_marginHorizontal="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp">
        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_gravity="top"
            android:layout_marginTop="7dp"
            android:src="@drawable/baseline_circle_24"
            app:tint="@color/text_primary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/about_profile"
            android:textColor="@color/text_primary" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="6. Support and Feedback"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/secondary"
        android:layout_marginHorizontal="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_support"
        android:textColor="@color/text_primary"
        android:layout_marginTop="5dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="10dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>